final spacing issue on the J ligature

--- a/css/site.css
+++ b/css/site.css
@@ -590,7 +590,7 @@ ul.timeline-wrapper > li:nth-of-type(10):before {
     content:'25';
 }
 ul.timeline-wrapper > li:nth-of-type(10):before {
-    width: 95px;
+    width: 92px;
 }
 ul.timeline-wrapper > li:nth-of-type(11):before {
     content:'26';
